[gd_scene load_steps=3 format=2]

[ext_resource path="res://GroupUpdateUI/GroupUpdateUI.gd" type="Script" id=1]
[ext_resource path="res://GroupUpdateUI/Label.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 330.0
margin_bottom = 20.0
text = "Change Group A to random values"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGroupA1" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 330.0
margin_bottom = 38.0
text = "I'm A but I should't update because my key is not 1"
script = ExtResource( 2 )

[node name="LabelGroupB3" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 330.0
margin_bottom = 56.0
text = "I'm B and shouldn't update"
script = ExtResource( 2 )

[node name="LabelGroupA2" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 330.0
margin_bottom = 74.0
text = "I'm A and should update"
script = ExtResource( 2 )
key = 1

[node name="LabelGroupB1" type="Label" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 330.0
margin_bottom = 92.0
text = "I'm B and shouldn't update"
script = ExtResource( 2 )

[node name="LabelGroupB2" type="Label" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 330.0
margin_bottom = 110.0
text = "I'm B and shouldn't update"
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 330.0
margin_bottom = 142.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 323.0
margin_bottom = 21.0

[node name="LabelGroupA3" type="Label" parent="VBoxContainer/PanelContainer/GridContainer" groups=[
"A",
]]
margin_right = 297.0
margin_bottom = 14.0
text = "I'm A and should update (no matter the depth)"
script = ExtResource( 2 )
key = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
